feat: reading pdf content and persisting it on database